# Alice

./: README.md  alice-0.1.2.py  alice-0.1.3.py  alice-CHANGELOG.md  alice-gp0.1.6.2.py  alice-gp0.1.6.py  alice-p0.1.4.py  alice-p0.1.5.fixed6.py  alice-p0.1.5.py  alice.py
Alice/: alice.py
Alice-0.0.5/: alice-0.0.5.py
Alice-0.1.0/: alice-0.1.0.py
Alice-Grok/: Cargo.toml
Alice-Grok/src/: main.rs
Alice-Testing-rs/alice-rs/: Cargo.toml
Alice-Testing-rs/alice-rs/src/: main.rs
Alice/old/: Cargo.toml  alice-0.0.2.py  alice-0.0.4.py  alice.rs
Alice/old/Alice_Darkmode/: alice_darkmode-0.0.2.py  alice_darkmode.py
Alice/old1/: alice-gp0.1.6.1.py  alice-p0.1.5.py
Alice_Current/: alice-0.1.1.py
Alice_Darkmode/: alice_darkmode-termux.patch  alice_darkmode-termux_patch-README.md
