[package]
name = "alice_gp_rs"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Chase K. Bryan"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
dunce = "1.0"
html2text = "0.6"
indicatif = "0.17"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
url = "2.5"
walkdir = "2.5"
which = "6.0"
whoami = "1.5"